...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bienvenidos" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dfQ-ty-t0W">
                                <rect key="frame" x="20" y="104" width="280" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="welcomeLabel"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="7kZ-EC-4xK"/>
...
                    <navigationItem key="navigationItem" id="VEC-ds-g0a"/>
                    <connections>
                        <outlet property="userTextField" destination="QK9-TB-pwL" id="sfu-ll-gkQ"/>
                        <segue destination="rgu-j9-m32" kind="show" identifier="goToPassword" id="uBr-xm-gNR"/>
                        <segue destination="na0-2y-2Ri" kind="show" identifier="goToHome" id="DYu-z9-SZa"/>
...
                        <viewLayoutGuide key="safeArea" id="5a7-5E-aOc"/>
                        <color key="backgroundColor" red="0.1019607843" green="0.73725490199999999" blue="0.61176470589999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <accessibility key="accessibilityConfiguration" identifier="passwordScreen"/>
                        <constraints>
                            <constraint firstItem="HcP-cH-kuc" firstAttribute="top" secondItem="5a7-5E-aOc" secondAttribute="top" constant="190" id="0Yd-2k-bfs"/>
...
                    <navigationItem key="navigationItem" id="N8a-lR-3eI"/>
                    <connections>
                        <outlet property="passwordTextField" destination="UML-XJ-luC" id="1En-Z7-dJ7"/>
                        <segue destination="na0-2y-2Ri" kind="show" identifier="goToHome" id="8Oc-i9-TU1"/>
                    </connections>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Usuario" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YCi-x2-QQt">
                                <rect key="frame" x="30" y="94" width="260" height="50"/>
                                <accessibility key="accessibilityConfiguration" identifier="usernameLabel"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="Ore-jK-AK3"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fecha" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RAB-WI-cBr">
                                <rect key="frame" x="30" y="234" width="260" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="dateLabel"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="iUR-x6-X5h"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hora" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JVf-pQ-jGr">
                                <rect key="frame" x="30" y="174" width="260" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="hourLabel"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="0EA-Wu-hX5"/>
...
                        <viewLayoutGuide key="safeArea" id="6nd-xq-Guh"/>
                        <color key="backgroundColor" red="0.1019607843" green="0.73725490199999999" blue="0.61176470589999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <accessibility key="accessibilityConfiguration" identifier="homeScreen"/>
                        <constraints>
                            <constraint firstItem="JVf-pQ-jGr" firstAttribute="leading" secondItem="6nd-xq-Guh" secondAttribute="leading" constant="30" id="69o-2O-Non"/>
...
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Editar Informacion"/>
                                <connections>
                                    <action selector="editInfoPressed:" destination="eUj-Re-JkL" eventType="touchUpInside" id="44w-1h-fIe"/>
...
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Cerrar sesion"/>
                                <connections>
                                    <segue destination="UYh-bZ-ZOA" kind="unwind" identifier="" unwindAction="unwindToViewControllerWithSegue:" id="VHX-zm-56K"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Info" id="pj3-nC-RdZ">
                        <imageReference key="image" image="info.circle.fill" catalog="system" symbolScale="medium"/>
                        <imageReference key="selectedImage" image="info.circle.fill" catalog="system" symbolScale="medium"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="G5Q-E3-wzQ">
                                                <rect key="frame" x="0.0" y="50.5" width="280" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="txtEmail"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Cpu-C0-2as">
                                                <rect key="frame" x="0.0" y="165" width="280" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="txtName"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NCm-c9-vKN">
                                                <rect key="frame" x="0.0" y="279.5" width="280" height="34"/>
