//
//  Constants.swift
//  ios-exercise-2
//
//  Created by Carolina Calderon on 30/5/23.
//

import Foundation

struct Constants {
    
    static let routeGoHome = "goToHome"
    static let routeGoPassword = "goToPassword"
    
    static let homeTitle = "Home"
    static let infoTitle = "Información"
    static let productTitle = "Productos"
    
    static let errorTitle = "Error"
    static let userMessage = "Ingresa un usuario"
    static let passwordMsg = "Ingresa tu contraseña"
    static let infoSuccess = "Informacion guardada con exito"
    static let emailValidation = "Email inválido"
    static let phoneValidation = "Telefono requerido"
    static let addressValidation = "Direccion requerida"
    static let nameValidation = "Nombre requerido"
    static let titleValidation = "Título requerido"
    static let descriptionValidation = "Descripción requerida"
    static let productValidation = "Producto requerido"
    static let priceValidation = "Precio requerido"
    static let discountValidation = "Descuento requerido"
    static let ratingValidation = "Rating requerido"
    static let stockValidation = "Stock requerido"
    static let brandValidation = "Marca requerido"
    static let urlValidation = "Url requerido"
    static let categoryValidation = "Categoria requerida"
    static let productSucess = "Producto agregado con exito"
    
    static let urlStringLogin = "auth/login"
    
    
}
